manifests/bitpoke-1.8.15.tgz-manifest.yaml
---
# Source: bitpoke/templates/apiserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-bitpoke-apiserver
  labels:
    helm.sh/chart: bitpoke-1.8.15
    app.kubernetes.io/name: bitpoke
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.8.15"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: apiserver
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 9000
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app.kubernetes.io/name: bitpoke
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: apiserver
---
# Source: bitpoke/templates/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitpoke-app-webhook
  labels:
    helm.sh/chart: bitpoke-1.8.15
    app.kubernetes.io/name: bitpoke
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.8.15"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: webhook
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 9443
    protocol: TCP
    name: https
  selector:
    app.kubernetes.io/name: bitpoke
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: controller
---
# Source: bitpoke/templates/apiserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-bitpoke-apiserver
  labels:
    helm.sh/chart: bitpoke-1.8.15
    app.kubernetes.io/name: bitpoke
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.8.15"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: apiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bitpoke
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: apiserver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bitpoke
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/component: apiserver
    spec:
      serviceAccountName: my-release-bitpoke-apiserver
      securityContext:
        fsGroup: 65532
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
      containers:
        - name: bitpoke-apiserver
          securityContext:
            {}
          image: "gcr.io/press-labs-public/dashboard:1.8.15"
          imagePullPolicy: IfNotPresent
          args:
            - apiserver
            - --http-addr=:8080
            - --grpc-addr=:9000
            - --base-url=http://localhost:8080
            - --stack.name=stack
            - --stack.namespace=bitpoke-stack
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: grpc
              containerPort: 9000
              protocol: TCP
          resources:
            {}
---
# Source: bitpoke/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-bitpoke-controller
  labels:
    helm.sh/chart: bitpoke-1.8.15
    app.kubernetes.io/name: bitpoke
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.8.15"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bitpoke
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: controller
  template:
    metadata:
      annotations:
        checksum/config: 0e1ebf1c49b3c54a0bda8bfec2bd300650fb4873f5d5b508ca89241140770a71
      labels:
        app.kubernetes.io/name: bitpoke
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/component: controller
    spec:
      serviceAccountName: my-release-bitpoke-controller
      securityContext:
        {}
      containers:
        - name: bitpoke-controller
          securityContext:
            {}
          image: "gcr.io/press-labs-public/dashboard:1.8.15"
          imagePullPolicy: IfNotPresent
          args:
            - controller-manager
            - --base-url=http://localhost:8080
            - --webhook-port=9443
            - --webhook-cert-dir=/run/webhook-certs
            - --stack.name=stack
            - --stack.namespace=bitpoke-stack
          ports:
            - name: webhook-https
              containerPort: 9443
              protocol: TCP
          volumeMounts:
            - name: webhook-certs
              mountPath: /run/webhook-certs
          resources:
            {}
      volumes:
        - name: webhook-certs
          secret:
            secretName: bitpoke-app-webhook
---
# Source: bitpoke/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: bitpoke-app-webhook
  labels:
    helm.sh/chart: bitpoke-1.8.15
    app.kubernetes.io/name: bitpoke
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.8.15"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/inject-ca-from: default/bitpoke-app-webhook
webhooks:
# NOTE: make sure to keep it in sync with config/webhook/manifests.yaml
- clientConfig:
    service:
      name: 'bitpoke-app-webhook'
      namespace: 'default'
      path: /validating-organization-dashboard
  failurePolicy: Fail
  name: validating-organization.presslabs.com
  namespaceSelector:
    matchExpressions:
    - key: control-plane
      operator: DoesNotExist
    - key: presslabs.com/kind
      operator: In
      values:
        - organization
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - namespaces
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
- clientConfig:
    service:
      name: 'bitpoke-app-webhook'
      namespace: 'default'
      path: /validating-project-dashboard
  failurePolicy: Fail
  name: validating-project.presslabs.com
  namespaceSelector:
    matchExpressions:
    - key: control-plane
      operator: DoesNotExist
    - key: presslabs.com/kind
      operator: In
      values:
        - project
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - namespaces
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
- clientConfig:
    service:
      name: 'bitpoke-app-webhook'
      namespace: 'default'
      path: /validating-site-dashboard
  failurePolicy: Fail
  name: validating-site.presslabs.com
  namespaceSelector:
    matchExpressions:
    - key: control-plane
      operator: DoesNotExist
  rules:
  - apiGroups:
    - wordpress.presslabs.org
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - wordpresses
  admissionReviewVersions:
  - v1
  - v1beta1
  sideEffects: None
---
# Source: bitpoke/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-release-bitpoke-test-connection"
  labels:
    helm.sh/chart: bitpoke-1.8.15
    app.kubernetes.io/name: bitpoke
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "1.8.15"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['my-release-bitpoke-apiserver:80']
  restartPolicy: Never
